<resources>
    <string name="app_name">MovieTeca</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">MovieTeca</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Configuración</string>
    <string name="search_hint">Buscar</string>

    <string name="menu_home">Películas</string>
    <string name="menu_mapas">Cerca de ti</string>
    <string name="menu_buscar">Búsqueda</string>
    <string name="menu_info">Información</string>
    <string name="menu_logout">Cerrar sesión</string>

    <string name="peli_detalle">Detalle Película</string>
    <string name="settings">Configuración</string>
    <string name="description_poster">Poster</string>
    <string name="pref_sort_key" translatable="false">sorting</string>
    <string name="pref_sort_label">Ordenar por</string>
    <string name="pref_sort_popular_label">Más Populares</string>
    <string name="pref_sort_popular_value" translatable="false">popular</string>
    <string name="pref_sort_rating_label">Mejor valorados</string>
    <string name="pref_sort_rating_value" translatable="false">top_rated</string>
    <string name="pref_sort_favorites_label">Favoritos</string>
    <string name="pref_sort_favorites_value" translatable="false">favorites</string>

    <string name="added_to_fav">Añadido a Favoritos</string>
    <string name="removed_from_fav">Borrado de  favoritos</string>
    <string name="wifi_enabled">Wifi activado!</string>
    <string name="mobile_data">Datos de móvil activados!</string>
    <string name="no_internet">Sin conexión a  Internet!</string>
    <string name="refresh">Actualiza si no ves los datos!</string>
    <string name="connect_refresh">Conecta y actualiza!</string>
    <string name="please_connect_to_internet">No hay conexión a internet</string>

    <string name="reviews">Comentarios</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
