<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.movieteca.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home">
    </fragment>

    <fragment
        android:id="@+id/nav_mapas"
        android:name="com.example.movieteca.ui.mapas.MapasFragment"
        android:label="@string/menu_mapas"
        tools:layout="@layout/fragment_mapas" />

    <fragment
        android:id="@+id/nav_search"
        android:name="com.example.movieteca.ui.buscar.BuscarFragment"
        android:label="@string/menu_buscar"
        tools:layout="@layout/fragment_buscar" />

    <fragment
        android:id="@+id/nav_info"
        android:name="com.example.movieteca.ui.info.InfoFragment"
        android:label="@string/menu_info"
        tools:layout="@layout/fragment_infoapp" />

    <fragment
        android:id="@+id/cerrar_sesion"
        android:name="com.example.movieteca.ui.logout.LogOut"
        android:label="@string/menu_logout"
         />

</navigation>